# Learn-to-Build-Real-Time-Text-To-Image-Generator---Gen-AI-v2-

./: .gitignore  LICENSE  README.md  SUBMISSION_CHECKLIST.md  environment.yml  generate_all_outputs.py  overwrite_outputs.py  pyproject.toml  requirements.txt  setup.py
01_FineTune_Text2Image/: .gitignore  LICENSE  README.md  download_dataset.py  download_model.py  infer.py  requirements.txt  train.py
01_FineTune_Text2Image/configs/: config.yaml
01_FineTune_Text2Image/outputs/: training_report.md
01_FineTune_Text2Image/src/: dataset.py
01_FineTune_Text2Image/tests/: test_finetune.py
02_CGAN_TextLabels/: .gitignore  LICENSE  README.md  generate_dataset.py  infer.py  requirements.txt  train.py
02_CGAN_TextLabels/configs/: config.yaml
02_CGAN_TextLabels/src/: dataset.py  discriminator.py  generator.py
02_CGAN_TextLabels/tests/: test_cgan.py
03_TextEmbeddingSoftware/: .gitignore  LICENSE  README.md  cli.py  requirements.txt
03_TextEmbeddingSoftware/api/: app.py
03_TextEmbeddingSoftware/configs/: config.yaml
03_TextEmbeddingSoftware/outputs/: embedding_report.md  test_embeds.npy
03_TextEmbeddingSoftware/src/: benchmark.py  embedder.py
03_TextEmbeddingSoftware/ui/: app.py
04_DatasetExplorer/: .gitignore  LICENSE  README.md  app.py  download_real_datasets.py  explore.py  requirements.txt
05_AttentionGAN/: .gitignore  LICENSE  README.md  generate_dataset.py  infer.py  requirements.txt  train.py
06_Text2ImagePipeline/: .gitignore  LICENSE  README.md  requirements.txt
original_training_project/: README.md  model.py  train.py  utils.py
(+25 files in other folders)
