[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internship_text_to_image"
version = "1.0.0"
description = "Advanced AI/ML Engineering Internship Workspace for Text-to-Image Generation"
readme = "MASTER_README.md"
requires-python = ">=3.11"
authors = [
    { name = "Intern" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "diffusers>=0.20.0",
    "accelerate>=0.20.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "gradio>=3.35.0",
    "reportlab>=3.6.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
